# SuRVoS

./: .gitignore  CONDUCT.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  Roadmap.md  SuRVoS  _config.yml  about.md  index.md  requirements.txt  setup.py  style.scss  survos.qcs  survos_launcher.py
_layouts/: default.html  documentation.html
_sass/: _highlights.scss  _svg-icons.scss  _variables.scss
_site/: feed.xml  index.html  sitemap.xml  style.css
_site/404/: index.html
_site/about/: index.html
_site/docs/: index.html
conda-recipe/: bld.bat  build.sh  meta.yaml
docs/: about.md  contribute.md  index.md  installation.md  workflow.md
docs/components/: annotations.md  export.md  features.md  index.md  label-splitter.md  label-statistics.md  pretrained-classifier.md  roi.md  super-regions.md  training.md  visualization.md
docs/tutorials/: index.md
fancybox/source/: jquery.fancybox.js
survos/: build.py  qt_compat.py  setup.py
survos/actions/: __init__.py  annotations.py  channels.py  (+6 more)
survos/lib/src/: CMakeLists.txt  bregman.cu  chambolle2005.cu  chambolle2011.cu  convolutions.cuh  convolutions_raw.cu  convolutions_separable.cu  convolutions_separable_shared.cu  cuda.cu  cuda.cuh  diffusion.cu  preprocess.cuh  slic.cu  slic.cuh  symmetric_eigvals3S.cu  symmetric_eigvals3S.cuh  tv.cu  types.h
survos/lib/src/zernike/: Binomial.cpp  Binomial.h  Factorial.h  ScaledGeometricMoments.h  ScaledGeometricalMoments.cpp  ZernikeDescriptor.cpp  ZernikeDescriptor.h  ZernikeMoments.cpp  ZernikeMoments.h  ZernikeMoments.inl  main.cpp
(+70 files in other folders)
